force-app/main/default/objects/RentalProduct__c/RentalProduct__c.object-meta.xml
<CustomObject>
    <description>Basic information about a product that can be rented.</description>
    <label>Rental Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>