force-app/main/default/objects/RentalProduct__c/fields/AvailabilityEnd__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityEnd__c</fullName>
    <description>Date and time when product is no longer available.</description>
    <inlineHelpText>Date and time when product is no longer available.</inlineHelpText>
    <label>Availability End</label>
    <type>DateTime</type>
</CustomField>