force-app/main/default/objects/RentalProduct__c/fields/AvailabilityStart__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityStart__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The Date and time when the product is available.</description>
    <inlineHelpText>The Date and time when the product is available.</inlineHelpText>
    <label>Availability Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>