force-app/main/default/objects/RentalProduct__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>The cost of acquisition</description>
    <inlineHelpText>The cost of acquisition</inlineHelpText>
    <label>Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>