force-app/main/default/objects/RentalProduct__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of product</description>
    <inlineHelpText>Description of product</inlineHelpText>
    <label>Description</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>