force-app/main/default/objects/RentalProduct__c/fields/GTIN__c.field-meta.xml
<CustomField>
    <fullName>GTIN__c</fullName>
    <description>Global Trade Item Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Also known as UPC Code, EAN Number or Barcode ID</inlineHelpText>
    <label>GTIN</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>