force-app/main/default/objects/RentalProduct__c/fields/IsAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsAvailable__c</fullName>
    <description>Formula field that determines if the product is available</description>
    <formula>AvailabilityStart__c &lt;= NOW() &amp;&amp; (ISBLANK(AvailabilityEnd__c) || AvailabilityEnd__c &gt; NOW())</formula>
    <inlineHelpText>AvailabilityEnd__c</inlineHelpText>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>