force-app/main/default/objects/RentalProduct__c/fields/SerializedTracking__c.field-meta.xml
<CustomField>
    <fullName>SerializedTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that represents if each item in the inventory should be counted individually and marked with a serial number.</description>
    <inlineHelpText>Represents if each item in the inventory related to this product should be counted individually and marked with a serial number.</inlineHelpText>
    <label>Serialized Tracking</label>
    <type>Checkbox</type>
</CustomField>