force-app/main/default/objects/RentalProduct__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The vendor from which the rental product was sourced.</description>
    <inlineHelpText>The vendor from which the rental product was sourced.</inlineHelpText>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A vendor account must be selected</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>RentAll Vendor</value>
        </filterItems>
        <infoMessage>Select the vendor where this product is sourced.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rental Products</relationshipLabel>
    <relationshipName>RentalProducts</relationshipName>
    <type>Lookup</type>
</CustomField>