force-app/main/default/objects/RentalProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GTIN__c</columns>
    <columns>IsAvailable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>